# computational-experiment-python

./: LICENSE  README.md  setup.cfg
src/computational_experiment/: Experiment.py  IndependentVariable.py  Metric.py  Output.py  Results.py  TestCase.py  TestSet.py  Trial.py  __init__.py
