[metadata]
name = computational_experiment
version = 0.1.0
license = BSD-2 Clause License
description = A framework for declaring and executing computational experiments
author = Jonathan Lee

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   pandas

[options.packages.find]
where=src
